# qeft

./: .gitignore  LICENSE  README.md  pyproject.toml
qeft/: benchmark.py  extract_outidx.py  finetune.py  main.py  model_config.json  qlinear.py  quant.py  recon.py  reorder.py  test.ipynb
qeft/kernel/: cuda_utils.h  qeft_cuda.cpp  setup_cuda.py
qeft/kernel/quantization_new/dequantize/: dequantize_cuda.cu  dequantize_cuda.h  dequantize_cuda_qeft.cu
qeft/kernel/quantization_new/gemm/: gemm_cuda.cu  gemm_cuda.h  gemm_cuda_qeft.cu
qeft/kernel/quantization_new/gemv/: gemv_cuda.cu  gemv_cuda.h  gemv_cuda_qeft.cu
qeft/monkeypatch/: ftllama_generate.py  ftllama_modeling.py
qeft/utils/: datautils.py  misc.py  modelutils.py
